Review comments resolution and removing noise from benchmark